Добавил информацию по вкладам