@@ -2,12 +2,11 @@ package my.help.finance.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import my.help.finance.entity.Cashback;
 import my.help.finance.dto.AccountRequestDto;
 import my.help.finance.dto.AccountResponseDto;
-import my.help.finance.dto.HistoricalDataResponseDto;
 import my.help.finance.entity.Account;
 import my.help.finance.entity.AccountType;
+import my.help.finance.entity.Cashback;
 import my.help.finance.mapper.AccountMapper;
 import my.help.finance.repository.AccountRepository;
 import org.springframework.stereotype.Service;
@@ -15,6 +14,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.YearMonth;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -27,22 +27,15 @@ public class AccountService {
     private final AccountRepository accountRepository;
     private final AccountMapper accountMapper;
     private final CashbackService cashbackService;
+    private final DepositService depositService; // Добавить
     private final FinanceSnapshotService snapshotService;
 
     public List<AccountResponseDto> getAllAccounts() {
         log.debug("Fetching all accounts");
         return accountRepository.findAll()
                 .stream()
-                .map(account -> {
-                    AccountResponseDto dto = accountMapper.toResponseDto(account);
-                    // Показываем кешбеки только для CARD счетов
-                    if (account.getType() == AccountType.CARD) {
-                        dto.setCashbacks(cashbackService.getCashbacksByAccount(account.getId()));
-                    } else {
-                        dto.setCashbacks(List.of()); // Пустой список для не-card счетов
-                    }
-                    return dto;
-                })
+                .map(this::toResponseDtoWithDetails)
+                .sorted(Comparator.comparing(AccountResponseDto::getType))
                 .collect(Collectors.toList());
     }
 
@@ -50,13 +43,26 @@ public class AccountService {
         log.debug("Fetching account with id: {}", id);
         Account account = accountRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Account not found with id: " + id));
+        return toResponseDtoWithDetails(account);
+    }
+
+    private AccountResponseDto toResponseDtoWithDetails(Account account) {
         AccountResponseDto dto = accountMapper.toResponseDto(account);
-        // Показываем кешбеки только для CARD счетов
+
+        // Добавляем кешбеки для CARD
         if (account.getType() == AccountType.CARD) {
-            dto.setCashbacks(cashbackService.getCashbacksByAccount(id));
+            dto.setCashbacks(cashbackService.getCashbacksByAccount(account.getId()));
         } else {
-            dto.setCashbacks(List.of());
+            dto.setCashbacks(Collections.emptyList());
         }
+
+        // Добавляем информацию о депозите для DEPOSIT
+        if (account.getType() == AccountType.DEPOSIT) {
+            dto.setDepositInfo(depositService.getDepositByAccountId(account.getId()));
+        } else {
+            dto.setDepositInfo(null);
+        }
+
         return dto;
     }
 
@@ -64,13 +70,21 @@ public class AccountService {
     public AccountResponseDto createAccount(AccountRequestDto requestDto) {
         log.info("Creating new account: {}", requestDto.getBankName());
 
+        // Проверка: для DEPOSIT обязательно должен быть depositInfo
+        if (requestDto.getType() == AccountType.DEPOSIT && requestDto.getDepositInfoDto() == null) {
+            throw new RuntimeException("Deposit info is required for DEPOSIT account type");
+        }
+
         Account account = accountMapper.toEntity(requestDto);
         Account savedAccount = accountRepository.save(account);
         log.info("Account created successfully with id: {}", savedAccount.getId());
 
-        AccountResponseDto dto = accountMapper.toResponseDto(savedAccount);
-        dto.setCashbacks(List.of());
-        return dto;
+        // Создаем депозит, если тип DEPOSIT
+        if (savedAccount.getType() == AccountType.DEPOSIT && requestDto.getDepositInfoDto() != null) {
+            depositService.createDeposit(savedAccount, requestDto.getDepositInfoDto());
+        }
+
+        return toResponseDtoWithDetails(savedAccount);
     }
 
     @Transactional
@@ -80,32 +94,22 @@ public class AccountService {
         Account existingAccount = accountRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Account not found with id: " + id));
 
-        // Если тип меняется с CARD на другой, нужно удалить связанные кешбеки
-        AccountType oldType = existingAccount.getType();
         AccountType newType = requestDto.getType();
 
+        // Обновляем основные поля
         accountMapper.updateEntity(existingAccount, requestDto);
 
-        // Если тип меняется с CARD на другой, удаляем все кешбеки
-        if (oldType == AccountType.CARD && newType != AccountType.CARD) {
-            List<Cashback> cashbacks = cashbackService.getCashbacksByAccountEntity(id);
-            for (var cb : cashbacks) {
-                cashbackService.deleteCashback(cb.getId());
-            }
-            log.info("Deleted all cashbacks for account {} because type changed from CARD to {}", id, newType);
+        // Обновляем депозит, если тип DEPOSIT
+        if (newType == AccountType.DEPOSIT) {
+            depositService.updateDeposit(id, requestDto.getDepositInfoDto());
         }
 
         Account updatedAccount = accountRepository.save(existingAccount);
         log.info("Account updated successfully with id: {}", id);
 
-        AccountResponseDto dto = accountMapper.toResponseDto(updatedAccount);
-        if (updatedAccount.getType() == AccountType.CARD) {
-            dto.setCashbacks(cashbackService.getCashbacksByAccount(id));
-        } else {
-            dto.setCashbacks(List.of());
-        }
-        return dto;
+        return toResponseDtoWithDetails(updatedAccount);
     }
+
 
     @Transactional
     public void deleteAccount(Long id) {
@@ -115,16 +119,24 @@ public class AccountService {
             throw new RuntimeException("Account not found with id: " + id);
         }
 
+        // Удаляем связанные данные
+        Account account = accountRepository.findById(id).orElseThrow();
+        if (account.getType() == AccountType.CARD) {
+            List<Cashback> cashbacks = cashbackService.getCashbacksByAccountEntity(id);
+            for (var cb : cashbacks) {
+                cashbackService.deleteCashback(cb.getId());
+            }
+        }
+        if (account.getType() == AccountType.DEPOSIT) {
+            depositService.deleteDeposit(id);
+        }
+
         accountRepository.deleteById(id);
         log.info("Account deleted successfully with id: {}", id);
     }
 
-    /**
-     * Получить исторические счета за указанный месяц
-     */
-    @Transactional(readOnly = true)
     public List<AccountResponseDto> getHistoricalAccounts(YearMonth yearMonth) {
-        HistoricalDataResponseDto historicalData = snapshotService.getHistoricalData(yearMonth);
+        var historicalData = snapshotService.getHistoricalData(yearMonth);
         return historicalData != null ? historicalData.getAccounts() : Collections.emptyList();
     }
 }
